[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mets-competition"
version = "0.1.0"
description = "OpenEnv environment for customer support ticket triage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openenv-core>=0.2.2,<0.3.0",
  "openai>=2.7.2,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pytest>=8.0.0,<9.0.0",
  "requests>=2.31.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
